fix: managed to get back from db values without crash